// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`clone assign 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Clone {
          "kind": "clone",
          "what": Variable {
            "curly": false,
            "kind": "variable",
            "name": "obj",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`clone simple 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Clone {
        "kind": "clone",
        "what": Variable {
          "curly": false,
          "kind": "variable",
          "name": "obj",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`clone with property overrides 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Clone {
          "kind": "clone",
          "properties": Array {
            "items": [
              Entry {
                "byRef": false,
                "key": String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": ""name"",
                  "unicode": false,
                  "value": "name",
                },
                "kind": "entry",
                "unpack": false,
                "value": Variable {
                  "curly": false,
                  "kind": "variable",
                  "name": "name",
                },
              },
              Entry {
                "byRef": false,
                "key": String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": ""id"",
                  "unicode": false,
                  "value": "id",
                },
                "kind": "entry",
                "unpack": false,
                "value": Call {
                  "arguments": [
                    VariadicPlaceholder {
                      "kind": "variadicplaceholder",
                    },
                  ],
                  "kind": "call",
                  "what": Name {
                    "kind": "name",
                    "name": "getId",
                    "resolution": "uqn",
                  },
                },
              },
            ],
            "kind": "array",
            "shortForm": true,
          },
          "what": Variable {
            "curly": false,
            "kind": "variable",
            "name": "obj",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;
